small simplification